fixes padding overlap.

--- a/src/app/pages/home/series/series.component.scss
+++ b/src/app/pages/home/series/series.component.scss
@@ -8,7 +8,7 @@
   .seeMore {
     color: $red;
   }
-  .h2 {
+  .title {
     font-family: $aktiv;
     font-size: 30px;
     font-weight: 700;
@@ -24,7 +24,7 @@
       padding-top: 2rem;
     }
     li {
-      border-bottom: 1px solid $dark_gray_4;
+      border-bottom: 1px solid $dark_gray_5;
       padding: 25px 0;
       &:first-child {
         padding-top: 0px;
