--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -22,6 +22,7 @@
   line-height: 12px;
   color: $red;
   padding: 10px 0 10px;
+  display: inline-block;
 }
 .articleTitles {
   font-size: 16px;
